# wab

./: README.md  pyproject.toml
wab projekt/: docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
wab projekt/items/: Dockerfile.admin  pyproject.toml  requirements.txt
wab projekt/items/proto/: orders.proto
wab projekt/items/src/: admin_api.py  admin_routes.py  database.py  main.py  models.py  orders_pb2_grpc.py  rabbitmq.py  routes.py  user_api.py  user_routes.py
wab projekt/items/templates/: admin_homepage.html  admin_items.html  admin_navigation.html  admin_new_item.html  cart.html  homepage.html  items.html  navigation.html  navigation_logged_in.html  navigation_logged_out.html  order_confirmation.html  orders.html
wab projekt/items/tests/: item-store.http
wab projekt/orders/: docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
wab projekt/orders/postgres/: init_order.sql
wab projekt/orders/src/: crud.py  database.py  dockerfile  main.py  models.py  orders_pb2.py  orders_pb2_grpc.py  rabbitmq.py  requirements.txt  schemas.py  worker.py
wab projekt/orders/tests/: item-store.http
wab projekt/src/: database.py  main.py  models.py  routes.py
wab projekt/templates/: cart.html  items.html
wab projekt/tests/: item-store.http
xdostal8 wab/order/: docker-compose.yml
xdostal8 wab/order/fastapi-service/: Dockerfile  routes.py  schemas.py
xdostal8 wab/order/grpc-service/: Dockerfile  main.py
xdostal8 wab/order/grpc-service/proto/: order.proto
xdostal8 wab/order/postgres/initdb.d/: order.sql
