[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jan Kolomazník", email = "jan.kolomaznik@gmail.com"},
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "authlib>=1.3.0",
    "httpx>=0.26.0",
    "itsdangerous>=2.1.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn src.main:app --reload"
