[project]
name = "Item store service"
version = ""
description = ""
authors = [
    {name = "David Dostal", email = "xdostal8@mendelu.cz"},
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "authlib>=1.3.0",
    "httpx>=0.26.0",
    "itsdangerous>=2.1.2",
    "pymongo>=4.6.1",
    "pydantic>=2.5.3",
    "pika>=1.3.2",
    "jinja2>=3.1.3",
    "grpcio-tools>=1.60.0",
    "grpcio>=1.59.3",
    "python-multipart>=0.0.5",


]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn src.main:app --reload"
